--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,4 +1,7 @@
 <div>
     <!-- <h4>I am the Server component</h4> -->
-    <p>{{ 'Server' }} with ID {{ serverId }} is {{ getServerStatus() }}</p>
+    <p  [ngStyle]="{ backgroundColor: getColor() }"
+        [ngClass]="{ online: getServerStatus() === 'online' }">
+         {{ 'Server' }} with ID {{ serverId }} is {{ getServerStatus() }}
+    </p>
 </div>
