--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,9 +2,11 @@
 
 <input type="text" class="form-control" (input)="onUpdateServername($event)">
 <button class="btn btn-primary" [disabled]="!isAddServerBtnDisabled" (click)="onCreateServer()">Add Server</button>
-<p>{{ severCreationStatus }}</p>
-<hr>
-<app-server></app-server>
-<app-server></app-server>
+<p *ngIf="serverCreated; else noServer">Server was created  with name : {{ serverName }}</p>
+<ng-template #noServer>
+  <p>No server was created!</p>
+</ng-template>
+<app-server *ngFor="let server of servers"></app-server>
+
 <!-- <div class="app-server"></div>
 <div class="app-server"></div> -->
